# vantage-earn

./: .env.example  ARCHITECTURE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  render.yaml
.github/workflows/: ci.yml
content/: ANLEITUNG.md  BERICHT-FUER-CHATGPT.md  README.md
content/WOCHE-1/: skripte.md
content/prompts/: tages-prompt.md
crates/ai-engine/: Cargo.toml
crates/ai-engine/src/: client.rs  config.rs  copilot.rs  error.rs  firewall.rs  lib.rs  prompt.rs  validator.rs
crates/api-gateway/: Cargo.toml
crates/api-gateway/migrations/: 001_initial.sql  002_payout_holds.sql  003_referrals.sql  004_watches_today.sql  005_payout_method.sql  006_gamification_bonuses.sql  007_daily_challenge.sql  008_admin.sql  009_feature_flags.sql  010_admin_notes.sql  011_gamification.sql  012_announcements.sql  013_indexes.sql  014_user_credentials.sql  015_early_adopter_bonus.sql  016_password_reset_tokens.sql
crates/api-gateway/src/: ad_config.rs  admin.rs  announcements.rs  auth.rs  bitlabs.rs  dev.rs  early_adopter.rs  email.rs  error.rs  extractors.rs  feature_flags.rs  fraud_admin.rs  gamification.rs  gamification_hooks.rs  health.rs  lib.rs  main.rs  pwa.rs  rate_limit.rs  release_info.rs  routes.rs  state.rs  top_offers.rs  video_offers.rs
crates/api-gateway/src/middleware/: client_ip.rs  error_enrich.rs  mod.rs  request_id.rs  security_headers.rs
crates/api-gateway/src/store/: admin_extra.rs  announcements.rs  audit.rs  flags.rs  gamification.rs  gamification_memory.rs  gamification_postgres.rs  ledger.rs  memory.rs  mod.rs  payout.rs  postgres.rs
crates/api-gateway/tests/: integration.rs
crates/currency-engine/: Cargo.toml
crates/currency-engine/src/: lib.rs
crates/event-bus/: Cargo.toml
crates/event-bus/src/: lib.rs
crates/fraud-engine/: Cargo.toml
crates/fraud-engine/src/: lib.rs
crates/liquidity-engine/: Cargo.toml
crates/liquidity-engine/src/: lib.rs
crates/localization-engine/: Cargo.toml
crates/localization-engine/src/: lib.rs
crates/referral-engine/: Cargo.toml
crates/referral-engine/src/: lib.rs
crates/reward-engine/: Cargo.toml
crates/reward-engine/src/: bonuses.rs  lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: context.rs  error.rs  events.rs  lib.rs  money.rs  payout.rs
crates/trust-score-engine/: Cargo.toml
crates/trust-score-engine/src/: lib.rs
crates/wallet-engine/: Cargo.toml
crates/wallet-engine/src/: lib.rs
docs/: ADS.md  AI_COPILOT.md  CHATGPT-UI-HANDOFF.md  DEPLOY.md  FLY.md  FREE_HOSTING.md  GEMINI-VIDEO-OFFERS.md  LEGAL_AUDIT_DE.md  OFFERWALL-PLAN.md
frontend/: 404.html  500.html  admin.html  index.html  manifest.webmanifest  sw.js
frontend/legal/: agb.html  datenschutz.html  impressum.html
scripts/: db-migrate.sh  db-up.sh  deploy-fly.sh  dev-with-db.sh  restart-dev.sh  test-e2e.sh  test-postgres.sh  tunnel-free.sh
templates/email/: password_reset.html  referral_bonus.html  registration.html  security_alert.html  withdrawal_approved.html  withdrawal_rejected.html
